// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton has active class when selected equals id 1`] = `
<li
  className=" active"
>
  <a
    href="#test"
    onClick={[Function]}
    role="tab"
  >
     
    fa fa-home
  </a>
</li>
`;

exports[`MenuButton has disabled class disabled equals true 1`] = `
<li
  className=" active disabled"
>
  <a
    href="#test"
    onClick={[Function]}
    role="tab"
  >
     
    fa fa-home
  </a>
</li>
`;

exports[`MenuButton has glowing on 1`] = `
<li
  className=" active disabled glowing"
>
  <a
    href="#test"
    onClick={[Function]}
    role="tab"
  >
     
    fa fa-home
  </a>
</li>
`;

exports[`MenuButton has not active class when selected not equals id 1`] = `
<li
  className=""
>
  <a
    href="#test"
    onClick={[Function]}
    role="tab"
  >
     
    fa fa-home
  </a>
</li>
`;

exports[`Tab has active class with active prop 1`] = `
<div
  className="sidebar-pane active"
  id="home"
>
  <h1
    className="sidebar-header"
  >
    Home
    <div
      className="sidebar-close"
      onClick={undefined}
      role="btn"
    >
      <i
        className="fa fa-caret-left"
      />
    </div>
  </h1>
  <p>
    No place like home!
  </p>
</div>
`;

exports[`Tab has not active class without active prop 1`] = `
<div
  className="sidebar-pane"
  id="home"
>
  <h1
    className="sidebar-header"
  >
    Home
    <div
      className="sidebar-close"
      onClick={undefined}
      role="btn"
    >
      <i
        className="fa fa-caret-left"
      />
    </div>
  </h1>
  <p>
    No place like home!
  </p>
</div>
`;

exports[`Tab makes closeIcon fa fa-caret-left when position is left 1`] = `
<div
  className="sidebar-pane active"
  id="home"
>
  <h1
    className="sidebar-header"
  >
    Home
    <div
      className="sidebar-close"
      onClick={undefined}
      role="btn"
    >
      <i
        className="fa fa-caret-left"
      />
    </div>
  </h1>
  <p>
    No place like home!
  </p>
</div>
`;

exports[`Tab makes closeIcon fa fa-caret-right when position is right 1`] = `
<div
  className="sidebar-pane active"
  id="home"
>
  <h1
    className="sidebar-header"
  >
    Home
    <div
      className="sidebar-close"
      onClick={undefined}
      role="btn"
    >
      <i
        className="fa fa-caret-right"
      />
    </div>
  </h1>
  <p>
    No place like home!
  </p>
</div>
`;
